# -Permitly

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  FEATURES.md  README.md  docker-compose.yml  openapi.yaml  package-lock.json  package.json
apps/api/: platform-router.mjs  server.mjs  store.mjs
apps/web/: account.html  account.js  app.js  head-snippet.txt  index.html  landing.html  signup.html  styles.css  vercel.json
backend_fastapi/: .fastapicloudignore  Dockerfile  pyproject.toml  requirements.txt
backend_fastapi/alembic/: env.py
backend_fastapi/alembic/versions/: 0001_initial_schema.py
backend_fastapi/app/: main.py
backend_fastapi/app/api/: actions.py  agents.py  approvals.py  audit_routes.py  auth.py  billing_router.py  credentials.py  cruise.py  delegations.py  deps.py  permits.py  policies.py  receipts.py  roles.py  schemas.py  stakes.py  team.py  usage.py  webhook_routes.py
backend_fastapi/app/core/: audit.py  billing.py  config.py  firewall.py  policy.py  rbac.py  receipts.py  rialo.py  security.py  vault.py
backend_fastapi/app/db/: crud.py  models.py  product_models.py  session.py
contracts/: agent_permit.rialo
database/postgres/: 001_init.sql
database/sqlite/: 001_init.sql
docs/: API.md  PRODUCTION.md  RIALO.md  SDK.md  SECURITY.md
scripts/: cruise-smoke.mjs  deploy-rialo.mjs  keygen.mjs  saas-smoke.mjs  smoke.mjs
tests/: platform.test.mjs  policy.test.mjs  receipts.test.mjs  rialo-adapter.test.mjs  security.test.mjs
