[project]
name = "permitly-backend"
version = "4.2.0"
description = "AgentPermit / Permitly FastAPI backend"
requires-python = "==3.12.*"
dependencies = [
    "fastapi[standard]==0.115.0",
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "email-validator==2.2.0",
    "SQLAlchemy==2.0.32",
    "asyncpg==0.29.0",
    "alembic==1.13.2",
    "httpx==0.27.0",
    "cryptography==43.0.0",
    "python-multipart==0.0.9",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.setuptools.packages.find]
include = ["app*"]
